# rusty-pid

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: controller.yml
controller/: .gitignore  Cargo.toml  README.md
controller/.cargo/: config.toml
controller/.github/workflows/: rust.yml
controller/data/: raw_boot_temps
controller/docs/: flash.md  hardware.md  pinout.md
controller/src/: config.rs  main.rs  pid.rs  state.rs
controller/src/peripherals/: bluetooth.rs  boiler.rs  display.rs  heater.rs  mod.rs
ui/ui/: AppDelegate.swift  ContentView.swift  DashboardView.swift  Info.plist  SceneDelegate.swift  SettingsView.swift
ui/ui.xcodeproj/: project.pbxproj
ui/ui.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ui/ui.xcodeproj/project.xcworkspace/xcuserdata/michaelnitschinger.xcuserdatad/: UserInterfaceState.xcuserstate
ui/ui.xcodeproj/xcuserdata/michaelnitschinger.xcuserdatad/xcschemes/: xcschememanagement.plist
